platform/external_ingress/sys1389/prometheus-endpoint.yaml
apiVersion: v1
kind: Service
metadata:
  name: sys1389-prometheus-service
  namespace: fhs-prometheus-ingress
spec:
  ports:
    - protocol: TCP
      port: 80         # The port your Ingress will target inside the cluster
      targetPort: 9090 # The actual port the external VM is listening on
---
apiVersion: v1
kind: Endpoints
metadata:
  name: sys1389-prometheus-service # Must exactly match the Service name
  namespace: fhs-prometheus-ingress
subsets:
  - addresses:
      - ip: 192.168.8.33   # The IP address of your non-K8s server
    ports:
      - port: 9090         # Must match targetPort above
